text new branch

--- a/samaaaaar2.html
+++ b/samaaaaar2.html
@@ -3,8 +3,8 @@
   <title> samaaaaar2 </title>
  </head>
  <body bgcolor="yellow">
-  
  <h1><u><center><font color="blue">this is a blue underlined header</font></center></u></h1>
+ <h1>welcome to page elso</h1>
  <div>ay hagaaaaaaaaaaaaaaaaaaa</div>
  <p aligne="lift"><font size="2"><b>the paragraphs section</b></font></p>
  <div id ="walla" align="right"><font size="4" color="red"> Except this paragraph which is font 18 aligne right and red color</font></div>
